[package]
name = "tomsg-rs"
description = "async library for the tomsg chat protocol"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/lieuwex/tomsg-rs/"
authors = ["Lieuwe Rooijakkers <lieuwerooijakkers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
futures-util = "0.3.4"
tokio = { version = "0.2.22", features = [ "io-util", "sync", "net" ] }
