[package]
name = "tomsg-rs"
description = "async library for the tomsg chat protocol"
version = "0.6.0"
license = "MIT"
repository = "https://github.com/lieuwex/tomsg-rs/"
authors = ["Lieuwe Rooijakkers <lieuwerooijakkers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = [ "io-util", "sync", "net", "rt" ] }
